--- a/src/main/webapp/emr/patient.xhtml
+++ b/src/main/webapp/emr/patient.xhtml
@@ -5,6 +5,7 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:emr="http://java.sun.com/jsf/composite/ezcomp/emr">
     <h:body>
         <ui:composition template="/resources/template/template.xhtml">
@@ -14,7 +15,7 @@
 
                         <p:panel class="m-2 p-2">
                             <f:facet name="header">
-                                <p:outputLabel value="Edit Patient Demographic Details" />
+                                <h:outputLabel value="Edit Patient Demographic Details" />
                                 <p:spacer width="10" />
                                 <p:commandButton value="Save" action="#{patientController.saveAndNavigateToProfile()}"
                                                  ajax="false" icon="pi pi-check" iconPos="right" styleClass="ui-button-warning" />
@@ -22,57 +23,69 @@
                             <div class="container-fluid">
                                 <div class="row form-group">
                                     <div class="col-md-2">
-                                        <p:outputLabel value="Title:"  class="form-label" />
-                                        <p:selectOneMenu id="cmbTitle" value="#{patientController.current.person.title}" class="form-control">
+                                        <h:outputLabel value="Title:"  
+                                                       for="cmbTitle"
+                                                       class="form-label" />
+                                        <h:selectOneMenu id="cmbTitle" 
+                                                         value="#{patientController.current.person.title}"
+                                                         class="form-control">
                                             <f:selectItem itemLabel="Select Title"  />
-                                            <f:selectItems value="#{billController.title}" var="i" itemLabel="#{i.label}"
+                                            <f:selectItems value="#{billController.title}" 
+                                                           var="i" 
+                                                           itemLabel="#{i.label}"
                                                            itemValue="#{i}" />
-                                        </p:selectOneMenu>
+                                        </h:selectOneMenu>
                                     </div>
                                     <div class="col-md-10">
-                                        <p:outputLabel value="Name:" for="txtName" class="form-label" />
-                                        <p:inputText id="txtName" value="#{patientController.current.person.name}" class="w-100 form-control" />
+                                        <h:outputLabel value="Name:" for="txtName" class="form-label" />
+                                        <h:inputText id="txtName" value="#{patientController.current.person.name}" class="w-100 form-control" />
                                     </div>
                                 </div>
                                 <div class="row form-group">
                                     <div class="col-md-2">
-                                        <p:outputLabel value="Sex:"  class="form-label" />
-                                        <p:selectOneMenu id="txtNewSex" value="#{patientController.current.person.sex}" class="form-control" >
+                                        <h:outputLabel value="Sex:"  class="form-label" />
+                                        <h:selectOneMenu id="txtNewSex"
+                                                         value="#{patientController.current.person.sex}" 
+                                                         class="form-control" >
                                             <f:selectItem itemLabel="Select Gender" />
                                             <f:selectItems value="#{billController.sex}" />
-                                        </p:selectOneMenu>
+                                        </h:selectOneMenu>
                                     </div>
                                     <div class="col-md-4">
-                                        <p:outputLabel value="Age :"  class="form-label" />
+                                        <h:outputLabel value="Age :"  class="form-label" />
                                         <div class="row">
                                             <div class="col-md-4">
-                                                <p:inputText autocomplete="off" id="year" placeholder="Years"
+                                                <h:inputText autocomplete="off" id="year" pt:placeholder="Years"
                                                              value="#{patientController.ageYearComponant}" class="form-control" >
                                                     <f:ajax event="blur" execute="@this" render="calNewPtDob"
                                                             listener="#{patientController.calculateDobFromAgeComponants(patientController.current)}" />
-                                                </p:inputText>
+                                                </h:inputText>
                                             </div>
                                             <div class="col-md-4">
-                                                <p:inputText autocomplete="off" id="month" placeholder="months" class="form-control" 
+                                                <h:inputText autocomplete="off" id="month" pt:placeholder="months" class="form-control" 
                                                              value="#{patientController.ageMonthComponant}">
                                                     <f:ajax event="blur" execute="@this" render="calNewPtDob"
                                                             listener="#{patientController.calculateDobFromAgeComponants(patientController.current)}" />
-                                                </p:inputText>
+                                                </h:inputText>
                                             </div>
                                             <div class="col-md-4">
-                                                <p:inputText autocomplete="off" id="day" placeholder="days"
+                                                <h:inputText autocomplete="off" id="day" pt:placeholder="days"
                                                              value="#{patientController.ageDateComponant}" class="form-control" >
                                                     <f:ajax event="blur" execute="@this" render="calNewPtDob"
                                                             listener="#{patientController.calculateDobFromAgeComponants(patientController.current)}" />
-                                                </p:inputText>
+                                                </h:inputText>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <p:outputLabel value="Date of Birth:"  class="form-label" />
-                                        <p:datePicker value="#{patientController.current.person.dob}" id="calNewPtDob"
-                                                      pattern="dd MMMM yyyy" style="border: none; padding: 0px;" yearNavigator="true"
-                                                      maxdate="#{sessionController.currentDate}" inputStyle="width:100%;" class="form-control" >
+                                        <h:outputLabel value="Date of Birth:"  class="form-label" />
+                                        <p:datePicker value="#{patientController.current.person.dob}" 
+                                                      id="calNewPtDob"
+                                                      pattern="dd MMMM yyyy" 
+                                                      yearNavigator="true"
+                                                      maxdate="#{sessionController.currentDate}" 
+                                                      inputStyleClass="form-control"
+                                                      class="w-100" >
                                             <p:ajax event="dateSelect" process="calNewPtDob" update="year month day"
                                                     listener="#{patientController.calculateAgeComponantsFromDob(patientController.current)}" />
                                         </p:datePicker>
@@ -80,46 +93,49 @@
                                 </div>
                                 <div class="row form-group">
                                     <div class="col-md-3">
-                                        <p:outputLabel value="Phone:"  class="form-label" />
-                                        <p:inputText value="#{patientController.current.person.phone}" class="form-control" />
+                                        <h:outputLabel value="Phone:"  class="form-label" />
+                                        <h:inputText value="#{patientController.current.person.phone}" class="form-control" />
                                     </div>
                                     <div class="col-md-3">
-                                        <p:outputLabel value="Mobile:"  class="form-label" />
-                                        <p:inputText value="#{patientController.current.person.mobile}" class="form-control" />
+                                        <h:outputLabel value="Mobile:"  class="form-label" />
+                                        <h:inputText value="#{patientController.current.person.mobile}" class="form-control" />
                                     </div>
                                     <div class="col-md-3">
-                                        <p:outputLabel value="Email:"  class="form-label" />
-                                        <p:inputText value="#{patientController.current.person.email}" class="form-control" />
+                                        <h:outputLabel value="Email:"  class="form-label" />
+                                        <h:inputText value="#{patientController.current.person.email}" class="form-control" />
                                     </div>
                                     <div class="col-md-3">
                                         <h:outputLabel class="form-label" value="NIC No:" />
-                                        <h:panelGroup>
-                                            <p:inputText autocomplete="off" id="txtNIC" value="#{patientController.current.person.nic}" class="form-control" />
-                                        </h:panelGroup>
+                                        <h:inputText 
+                                            autocomplete="off" 
+                                            id="txtNIC" 
+                                            value="#{patientController.current.person.nic}" 
+                                            class="form-control" />
+
                                     </div>
                                 </div>
                                 <div class="row form-group">
                                     <div class="col-md-12">
-                                        <p:outputLabel value="Address:"  class="form-label" />
-                                        <p:inputText value="#{patientController.current.person.address}" style="width: 100%;" class="form-control" />
+                                        <h:outputLabel value="Address:"  class="form-label" />
+                                        <h:inputText value="#{patientController.current.person.address}" style="width: 100%;" class="form-control" />
                                     </div>
                                 </div>
                                 <div class="row form-group">
                                     <div class="col-md-6">
-                                        <p:outputLabel value="PHN Number:"  class="form-label" />
-                                        <p:inputText value="#{patientController.current.phn}" class="form-control" />
+                                        <h:outputLabel value="PHN Number:"  class="form-label" />
+                                        <h:inputText value="#{patientController.current.phn}" class="form-control" />
                                     </div>
                                     <div class="col-md-6">
                                         <h:outputLabel class="form-label" value="MRN No"  />
                                         <h:panelGroup>
-                                            <p:inputText autocomplete="off" id="txtMrn" value="#{patientController.current.code}" class="form-control" />
+                                            <h:inputText autocomplete="off" id="txtMrn" value="#{patientController.current.code}" class="form-control" />
                                         </h:panelGroup>
                                     </div>
                                 </div>
                                 <div class="row form-group">
                                     <div class="col-md-12">
-                                        <p:outputLabel value="Comments:"  class="form-label" />
-                                        <p:inputText value="#{patientController.current.comments}" style="width: 100%;" class="form-control" />
+                                        <h:outputLabel value="Comments:"  class="form-label" />
+                                        <h:inputText value="#{patientController.current.comments}" style="width: 100%;" class="form-control" />
                                     </div>
                                 </div>
                             </div>
