--- a/src/main/webapp/themes/html5up-hyperspace/index.xhtml
+++ b/src/main/webapp/themes/html5up-hyperspace/index.xhtml
@@ -3,11 +3,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <title>#{webContentController.findSingleText('site_title')}</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
+        <link 
+            rel="stylesheet" 
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" 
+            integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" 
+            crossorigin="anonymous"/>
         <link rel="stylesheet" href="assets/css/main.css" />
         <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     </h:head>
@@ -70,11 +77,39 @@
             <!-- Home -->
             <section id="home" class="wrapper style1 fullscreen fade-up">
                 <div class="inner" >
-                    <h1>#{webContentController.findSingleText('site_title')}</h1>
+                    <div class="container-fluid row w-100" >
+                        <div class="col-8" >
+                            <h1>#{webContentController.findSingleText('site_title')}</h1>
+                        </div>
+                        <div class="col-4" >
+                            <!-- Dropdown for selecting language -->
+                            <h:form id="languageForm">
+                                <ui:repeat value="#{webLanguageController.items}" var="wl" >
+                                    <h:panelGroup rendered="#{wl ne webContentController.language}" >
+                                        <h:commandLink value="#{wl.name}" 
+                                                       action="#{webContentController.makeSelectedLanguageAsDisplayLanguage()}">
+                                            <f:setPropertyActionListener 
+                                                value="#{wl}" 
+                                                target="#{webContentController.selectedlanguage}" ></f:setPropertyActionListener>
+                                        </h:commandLink>
+                                        &nbsp;|
+                                    </h:panelGroup>
+                                </ui:repeat>
+                                <h:commandLink value="Login" action="/home" />
+                            </h:form>
+                        </div>
+                    </div>
+
+
                     <img src="#{webContentController.findSingleText('about_image')}" alt="Descriptive text" style="width: 50%; margin-right: 20px;" />
                     <p>#{webContentController.findSingleText('tagline')}</p>
+
+
+
+
                 </div>
             </section>
+
 
             <!-- about -->
             <section id="about" class="wrapper style2 spotlights">
@@ -282,44 +317,44 @@
 
             <!-- portal -->
             <h:form>
-            <section id="portal" class="wrapper style3 fade-up">
-                <div class="inner">
-                    <h2>#{webContentController.findSingleText('portals')}</h2>
-                    <p>
-                        <h:outputText 
-                            escape="false"
-                            value="#{webContentController.findSingleText('portal_details')}" >
-                        </h:outputText>
-                    </p>
-                    <div class="features">
-                        <section>
-                            <span class="icon solid major fa-code"></span>
-                            <h3>#{webContentController.findSingleText('portal1')}</h3>
-                            <p>
-                                <h:outputText 
-                                    escape="false"
-                                    value="#{webContentController.findSingleText('portal1_details')}" >
-                                </h:outputText>
-                            </p>
-                        </section>
-                        <section>
-                            <h:commandLink action="#{sessionController.navigateToLoginPage()}">
+                <section id="portal" class="wrapper style3 fade-up">
+                    <div class="inner">
+                        <h2>#{webContentController.findSingleText('portals')}</h2>
+                        <p>
+                            <h:outputText 
+                                escape="false"
+                                value="#{webContentController.findSingleText('portal_details')}" >
+                            </h:outputText>
+                        </p>
+                        <div class="features">
+                            <section>
                                 <span class="icon solid major fa-code"></span>
-                                <h3>#{webContentController.findSingleText('portal2')}</h3>
-                            </h:commandLink>
-                            <p>
-                                <h:outputText 
-                                    escape="false"
-                                    value="#{webContentController.findSingleText('portal2_details')}" >
-                                </h:outputText>
-                            </p>
-                        </section>
+                                <h3>#{webContentController.findSingleText('portal1')}</h3>
+                                <p>
+                                    <h:outputText 
+                                        escape="false"
+                                        value="#{webContentController.findSingleText('portal1_details')}" >
+                                    </h:outputText>
+                                </p>
+                            </section>
+                            <section>
+                                <h:commandLink action="#{sessionController.navigateToLoginPage()}">
+                                    <span class="icon solid major fa-code"></span>
+                                    <h3>#{webContentController.findSingleText('portal2')}</h3>
+                                </h:commandLink>
+                                <p>
+                                    <h:outputText 
+                                        escape="false"
+                                        value="#{webContentController.findSingleText('portal2_details')}" >
+                                    </h:outputText>
+                                </p>
+                            </section>
+                        </div>
+                        <ul class="actions">
+                            <li><a href="generic.html" class="button">Learn more</a></li>
+                        </ul>
                     </div>
-                    <ul class="actions">
-                        <li><a href="generic.html" class="button">Learn more</a></li>
-                    </ul>
-                </div>
-            </section>
+                </section>
             </h:form>
             <!-- contact -->
             <section id="contact" class="wrapper style1 fade-up">
