--- a/src/main/webapp/pharmacy/pharmacy_report_department_stock_by_single_product.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_department_stock_by_single_product.xhtml
@@ -8,8 +8,8 @@
       >
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/pharmacy/pharmacy_reports_index.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="Stock Report of Single Product" >
                         <h:panelGrid columns="2" >
