--- a/src/main/webapp/pharmacy/pharmacy_report_staff_stock_by_batch.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_staff_stock_by_batch.xhtml
@@ -9,8 +9,8 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/pharmacy/pharmacy_reports_index.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="Staff Stock Report by Batch" >
                         <h:panelGrid columns="5" >
