--- a/src/main/webapp/pharmacy/pharmacy_report_transfer_issue_bill_1.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_transfer_issue_bill_1.xhtml
@@ -14,8 +14,7 @@
             <ui:define name="subcontent">
                 <h:form>
 
-
-                    <p:panel header="Detailed Transfer Listing - (Consider after receiving)" >
+                    <p:panel header="Detailed Transfer Listing (Do not consider receieve) - By Bills" >
 
                         <h:panelGrid columns="2" >
                             <h:outputLabel value="Transfer From" ></h:outputLabel>
@@ -29,37 +28,37 @@
                                             value="#{reportsTransfer.toDepartment}" converter="departmentConverter" >
                             </p:autoComplete>
                             <h:outputLabel value="From" ></h:outputLabel>
-                            <p:calendar value="#{reportsTransfer.fromDate}" pattern="dd MM yy HH:mm:ss a" ></p:calendar>
+                            <p:calendar value="#{reportsTransfer.fromDate}" pattern="dd MM yyyy HH:mm:ss a" ></p:calendar>
                             <h:outputLabel value="To" ></h:outputLabel>
-                            <p:calendar value="#{reportsTransfer.toDate}" pattern="dd MM yy HH:mm:ss a" ></p:calendar>
+                            <p:calendar value="#{reportsTransfer.toDate}" pattern="dd MM yyyy HH:mm:ss a" ></p:calendar>
                         </h:panelGrid>
 
                         <h:panelGrid columns="3">
-                            <p:commandButton ajax="false" value="Fill" action="#{reportsTransfer.fillDepartmentTransfersRecieveByBill()}" ></p:commandButton>
+                            <p:commandButton ajax="false" value="Fill" action="#{reportsTransfer.fillDepartmentTransfersIssueByBill}" ></p:commandButton>
+
                             <p:commandButton value="Print" ajax="false" action="#" >
                                 <p:printer target="gpBillPreview" ></p:printer>
                             </p:commandButton>
+
                             <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
                                 <p:dataExporter type="xlsx" target="tbl" fileName="Detailed_Transfer_Listing"  />
-                            </p:commandButton>                           
+                            </p:commandButton>  
                         </h:panelGrid>
 
-                        <h:panelGroup id="gpBillPreview">
-                            <p:dataTable id="tbl" styleClass="noBorder normalFont" 
-                                         value="#{reportsTransfer.transferBills}" var="i" >
+
+                        <h:panelGroup id="gpBillPreview" styleClass="noBorder summeryBorder">
+                            <p:dataTable id="tbl" value="#{reportsTransfer.transferBills}" var="i" >
                                 <f:facet name="header">
-                                    <h:outputLabel value="Transfer Receive From "/>
-                                    <h:outputLabel value="#{reportsTransfer.fromDepartment.name}"/>
-                                    <h:outputLabel value=" - To "/>
-                                    <h:outputLabel value="#{reportsTransfer.toDepartment.name}"/>
+                                    <h:outputLabel value="Transfer Issue To "/>
+                                    <h:outputLabel value="#{reportsTransfer.fromDepartment.name}"/> 
                                     <br></br>
                                     <h:outputLabel value="From  "/>
                                     <h:outputLabel value="#{reportsTransfer.fromDate}">
-                                        <f:convertDateTime pattern="dd/MM/yy hh:mm:ss a" ></f:convertDateTime>
+                                        <f:convertDateTime pattern="dd/MM/yy &nbsp; hh:mm:ss a" ></f:convertDateTime>
                                     </h:outputLabel>
-                                    <h:outputLabel value=" - To  "/>
+                                    <h:outputLabel value="To  "/>
                                     <h:outputLabel value="#{reportsTransfer.toDate}">
-                                        <f:convertDateTime pattern="dd/MM/yy hh:mm:ss a" ></f:convertDateTime>
+                                        <f:convertDateTime pattern="dd/MM/yy &nbsp; hh:mm:ss a" ></f:convertDateTime>
                                     </h:outputLabel>
                                 </f:facet>
 
@@ -67,7 +66,14 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Bill No"/>
                                     </f:facet>
-                                    <h:outputLabel value="#{i.deptId}" ></h:outputLabel>
+                                    <h:outputLabel value="#{i.deptId}" ></h:outputLabel>                                    
+                                </p:column>
+
+                                <p:column headerText="Cancelled No" sortBy="#{i.cancelledBill.deptId}">
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Cancelled No"/>
+                                    </f:facet>
+                                    <h:outputLabel value="#{i.cancelledBill.deptId}" ></h:outputLabel>                                    
                                 </p:column>
 
                                 <p:column headerText="Date">
@@ -79,13 +85,11 @@
                                     </h:outputLabel>
                                 </p:column>
 
-
-
-                                <p:column headerText="Cost Rate" style="text-align: right;" sortBy="#{i.netTotal}">
+                                <p:column headerText="Value" style="text-align: right;">
                                     <f:facet name="header">
-                                        <h:outputLabel value="Net Total"/>
+                                        <h:outputLabel value="Remarks"/>
                                     </f:facet>
-                                    <h:outputLabel value="#{i.netTotal}"  >
+                                    <h:outputLabel value="#{-i.netTotal}"  >
                                         <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                     </h:outputLabel>                                  
                                 </p:column>
@@ -93,22 +97,19 @@
 
                                 <p:columnGroup type="footer">
                                     <p:row>
-                                        <p:column colspan="2">
+                                        <p:column colspan="3" footerText="Totals">
                                             <f:facet name="footer">
                                                 <h:outputLabel value="Totals" ></h:outputLabel>
                                             </f:facet>
                                         </p:column>
-                                        <p:column style="text-align: right;" >
+
+                                        <p:column style="text-align: right;"  footerText="#{-reportsTransfer.netTotalValues}" >
                                             <f:facet name="footer">
-                                                <h:outputLabel value="#{-reportsTransfer.netTotalValues}" rendered="#{sessionController.loggedPreference.applicationInstitution eq 'Cooperative'}" >
-                                                    <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
-                                                </h:outputLabel>
-                                                <h:outputLabel value="#{reportsTransfer.netTotalValues}" rendered="#{sessionController.loggedPreference.applicationInstitution ne 'Cooperative'}" >
+                                                <h:outputLabel value="#{-reportsTransfer.netTotalValues}" >
                                                     <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                                 </h:outputLabel>
                                             </f:facet>
                                         </p:column>
-
                                     </p:row>
                                 </p:columnGroup>
 
