Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/resources/ezcomp/menu.xhtml
+++ b/src/main/webapp/resources/ezcomp/menu.xhtml
@@ -46,7 +46,7 @@
                             ajax="false" 
                             action="/opd_pre_bill"  
                             actionListener="#{opdPreBillController.prepareNewBill}" 
-                            value="Cashier OPD Billing"
+                            value="Billing for Cashier"
                             icon="fa fa-fw fa-cash-register"
                             rendered="#{webUserController.hasPrivilege('OpdPreBilling')}" ></p:menuitem>
 
