Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/emr/patient_search.xhtml
+++ b/src/main/webapp/emr/patient_search.xhtml
@@ -96,7 +96,7 @@
                                                 <i class="fas fa-venus" style="color: pink; font-size: 24px;"></i>
                                             </p:outputLabel>
                                             <p:outputLabel value=" "></p:outputLabel>
-                                            <p:outputLabel value="#{p.person.age}"></p:outputLabel>
+                                            <p:outputLabel value="#{p.person.ageAsString}"></p:outputLabel>
                                         </p:column>
                                         <p:column headerText="Phone &amp; Address" >
                                             <p:outputLabel value="#{p.person.phone}">
