--- a/src/main/webapp/opd/patient_search.xhtml
+++ b/src/main/webapp/opd/patient_search.xhtml
@@ -106,20 +106,29 @@
                                         </p:column>
                                         <p:column headerText="Actions">
                                             <div class="d-flex justify-content-between">
-                                                <p:commandButton value="Profile" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                                <p:commandButton value="Profile" action="#{patientController.navigateToOpdPatientProfile()}" ajax="false" styleClass="mx-2">
                                                     <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                 </p:commandButton>
-                                                <p:commandButton value="OPD Visit" 
-                                                                 action="#{patientController.navigateToNewOpdVisitFromSearch}" ajax="false" styleClass="mx-2">
+                                                <p:commandButton value="Edit" 
+                                                                 action="#{patientController.navigateToOpdPatientEdit()}" ajax="false" styleClass="mx-2">
                                                     <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                 </p:commandButton>
-
-
-                                                <p:commandButton value="Data Entry" 
-                                                                 action="#{patientController.navigateToNewDataEntryForm}" ajax="false" styleClass="mx-2">
+                                                <p:commandButton value="OPD Bill" 
+                                                                 action="#{patientController.navigateToOpdBill()}" 
+                                                                 ajax="false" 
+                                                                 styleClass="mx-2">
                                                     <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                 </p:commandButton>
-                                                <p:commandButton value="Billing" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                                <p:commandButton value="OPD Bill for Cashier" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                                    <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
+                                                </p:commandButton>
+                                                <p:commandButton value="Accept Payments" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                                    <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
+                                                </p:commandButton>
+                                                <p:commandButton value="Refunds" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                                    <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
+                                                </p:commandButton>
+                                                <p:commandButton value="Lab Reports" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
                                                     <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                 </p:commandButton>
 
