--- a/src/main/webapp/opd/patient.xhtml
+++ b/src/main/webapp/opd/patient.xhtml
@@ -17,60 +17,96 @@
                     You are NOT authorized
                 </h:panelGroup>
                 <h:panelGroup rendered="#{webUserController.hasPrivilege('OpdBilling') or webUserController.hasPrivilege('LabCashier')}" styleClass="opdPanel" >
-                    <p:panelGrid columns="2" class="w-100 table table-striped" >
-                        <p:outputLabel value="Name:" rendered="#{not empty patientController.current.person.nameWithTitle}" />
-                        <p:outputLabel value="#{patientController.current.person.nameWithTitle}" rendered="#{not empty patientController.current.person.nameWithTitle}" />
+                    <h:form >
 
-                        <p:outputLabel value="Age:" rendered="#{not empty patientController.current.person.ageAsString}" />
-                        <p:outputLabel value="#{patientController.current.person.ageAsString}" rendered="#{not empty patientController.current.person.ageAsString}" />
+                        <div class="row" >
 
-                        <p:outputLabel value="Sex:" rendered="#{not empty patientController.current.person.sex}" />
-                        <p:outputLabel value="#{patientController.current.person.sex}" rendered="#{not empty patientController.current.person.sex}" />
-
-                        <p:outputLabel value="Number:" rendered="#{not empty patientController.current.phn}" />
-                        <p:outputLabel value="#{patientController.current.phn}" rendered="#{not empty patientController.current.phn}" />
-
-                        <p:outputLabel value="Date of Birth:" rendered="#{not empty patientController.current.person.dob}" />
-                        <p:outputLabel value="#{patientController.current.person.dob}" rendered="#{not empty patientController.current.person.dob}">
-                            <f:convertDateTime pattern="dd MMMM yyyy" />
-                        </p:outputLabel>
-
-                        <p:outputLabel value="Race:" rendered="#{not empty patientController.current.person.race.name}" />
-                        <p:outputLabel value="#{patientController.current.person.race.name}" rendered="#{not empty patientController.current.person.race.name}" />
-
-                        <p:outputLabel value="Religion:" rendered="#{not empty patientController.current.person.religion.name}" />
-                        <p:outputLabel value="#{patientController.current.person.religion.name}" rendered="#{not empty patientController.current.person.religion.name}" />
-
-                        <p:outputLabel value="Occupation:" rendered="#{not empty patientController.current.person.occupation.name}" />
-                        <p:outputLabel value="#{patientController.current.person.occupation.name}" rendered="#{not empty patientController.current.person.occupation.name}" />
-
-                        <p:outputLabel value="Civil Status:" rendered="#{not empty patientController.current.person.civilStatus.name}" />
-                        <p:outputLabel value="#{patientController.current.person.civilStatus.name}" rendered="#{not empty patientController.current.person.civilStatus.name}" />
-
-                        <p:outputLabel value="Phone:" rendered="#{not empty patientController.current.person.phone}" />
-                        <p:outputLabel value="#{patientController.current.person.phone}" rendered="#{not empty patientController.current.person.phone}" />
-
-                        <p:outputLabel value="Mobile:" rendered="#{not empty patientController.current.person.mobile}" />
-                        <p:outputLabel value="#{patientController.current.person.mobile}" rendered="#{not empty patientController.current.person.mobile}" />
-
-                        <p:outputLabel value="Email:" rendered="#{not empty patientController.current.person.email}" />
-                        <p:outputLabel value="#{patientController.current.person.email}" rendered="#{not empty patientController.current.person.email}" />
-
-                        <p:outputLabel value="ID:" rendered="#{not empty patientController.current.person.nic}" />
-                        <p:outputLabel value="#{patientController.current.person.nic}" rendered="#{not empty patientController.current.person.nic}" />
-
-                        <p:outputLabel value="Code:" rendered="#{not empty patientController.current.code}" />
-                        <p:outputLabel value="#{patientController.current.code}" rendered="#{not empty patientController.current.code}" />
-
-                        <p:outputLabel value="Address:" rendered="#{not empty patientController.current.person.address}" />
-                        <p:outputLabel value="#{patientController.current.person.address}" rendered="#{not empty patientController.current.person.address}" />
-
-                        <p:outputLabel value="Blood Group:" rendered="#{not empty patientController.current.person.bloodGroup.name}" />
-                        <p:outputLabel value="#{patientController.current.person.bloodGroup.name}" rendered="#{not empty patientController.current.person.bloodGroup.name}" />
+                            <div class="col-md-8" >
+                                <p:panelGrid columns="2" class="w-100 table table-striped" >
+                                    <f:facet name="header" >
+                                        <h:commandButton value="Edit" action="#{patientController.navigateToOpdPatientEdit()}" ></h:commandButton>
+                                        <h:commandButton value="Search" action="#{opdBillController.navigateToSearchPatients()}" ></h:commandButton>
+                                        <h:commandButton value="New Patient" action="#{patientController.navigateToAddNewPatientForOpd()}" ></h:commandButton>
+                                    </f:facet>
 
 
+                                    <p:outputLabel value="Name:" rendered="#{not empty patientController.current.person.nameWithTitle}" />
+                                    <p:outputLabel value="#{patientController.current.person.nameWithTitle}" rendered="#{not empty patientController.current.person.nameWithTitle}" />
 
-                    </p:panelGrid>
+                                    <p:outputLabel value="Age:" rendered="#{not empty patientController.current.person.ageAsString}" />
+                                    <p:outputLabel value="#{patientController.current.person.ageAsString}" rendered="#{not empty patientController.current.person.ageAsString}" />
+
+                                    <p:outputLabel value="Sex:" rendered="#{not empty patientController.current.person.sex}" />
+                                    <p:outputLabel value="#{patientController.current.person.sex}" rendered="#{not empty patientController.current.person.sex}" />
+
+                                    <p:outputLabel value="Number:" rendered="#{not empty patientController.current.phn}" />
+                                    <p:outputLabel value="#{patientController.current.phn}" rendered="#{not empty patientController.current.phn}" />
+
+                                    <p:outputLabel value="Date of Birth:" rendered="#{not empty patientController.current.person.dob}" />
+                                    <p:outputLabel value="#{patientController.current.person.dob}" rendered="#{not empty patientController.current.person.dob}">
+                                        <f:convertDateTime pattern="dd MMMM yyyy" />
+                                    </p:outputLabel>
+
+                                    <p:outputLabel value="Race:" rendered="#{not empty patientController.current.person.race.name}" />
+                                    <p:outputLabel value="#{patientController.current.person.race.name}" rendered="#{not empty patientController.current.person.race.name}" />
+
+                                    <p:outputLabel value="Religion:" rendered="#{not empty patientController.current.person.religion.name}" />
+                                    <p:outputLabel value="#{patientController.current.person.religion.name}" rendered="#{not empty patientController.current.person.religion.name}" />
+
+                                    <p:outputLabel value="Occupation:" rendered="#{not empty patientController.current.person.occupation.name}" />
+                                    <p:outputLabel value="#{patientController.current.person.occupation.name}" rendered="#{not empty patientController.current.person.occupation.name}" />
+
+                                    <p:outputLabel value="Civil Status:" rendered="#{not empty patientController.current.person.civilStatus.name}" />
+                                    <p:outputLabel value="#{patientController.current.person.civilStatus.name}" rendered="#{not empty patientController.current.person.civilStatus.name}" />
+
+                                    <p:outputLabel value="Phone:" rendered="#{not empty patientController.current.person.phone}" />
+                                    <p:outputLabel value="#{patientController.current.person.phone}" rendered="#{not empty patientController.current.person.phone}" />
+
+                                    <p:outputLabel value="Mobile:" rendered="#{not empty patientController.current.person.mobile}" />
+                                    <p:outputLabel value="#{patientController.current.person.mobile}" rendered="#{not empty patientController.current.person.mobile}" />
+
+                                    <p:outputLabel value="Email:" rendered="#{not empty patientController.current.person.email}" />
+                                    <p:outputLabel value="#{patientController.current.person.email}" rendered="#{not empty patientController.current.person.email}" />
+
+                                    <p:outputLabel value="ID:" rendered="#{not empty patientController.current.person.nic}" />
+                                    <p:outputLabel value="#{patientController.current.person.nic}" rendered="#{not empty patientController.current.person.nic}" />
+
+                                    <p:outputLabel value="Code:" rendered="#{not empty patientController.current.code}" />
+                                    <p:outputLabel value="#{patientController.current.code}" rendered="#{not empty patientController.current.code}" />
+
+                                    <p:outputLabel value="Address:" rendered="#{not empty patientController.current.person.address}" />
+                                    <p:outputLabel value="#{patientController.current.person.address}" rendered="#{not empty patientController.current.person.address}" />
+
+                                    <p:outputLabel value="Blood Group:" rendered="#{not empty patientController.current.person.bloodGroup.name}" />
+                                    <p:outputLabel value="#{patientController.current.person.bloodGroup.name}" rendered="#{not empty patientController.current.person.bloodGroup.name}" />
+
+
+
+                                </p:panelGrid>
+                            </div>
+                            <div class="col-md-4" >
+                                <p:commandButton value="OPD Bill" 
+                                                 action="#{patientController.navigateToOpdBillFromOpdPatient()}" 
+                                                 ajax="false" 
+                                                 styleClass="mx-2">
+                                </p:commandButton>
+                                <p:commandButton value="OPD Bill for Cashier" action="#{patientController.navigateToOpdBillFromOpdPatient()}" ajax="false" styleClass="mx-2">
+                                </p:commandButton>
+                                <p:commandButton value="Accept Payments" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                </p:commandButton>
+                                <p:commandButton value="Refunds" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                </p:commandButton>
+                                <p:commandButton value="Lab Reports" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                </p:commandButton>
+                            </div>
+
+                        </div>
+
+
+
+
+                    </h:form>
+
 
 
 
