Closes #715 Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/opd/opd_bill_print.xhtml
+++ b/src/main/webapp/opd/opd_bill_print.xhtml
@@ -1,147 +1,88 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns:ui="http://java.sun.com/jsf/facelets"
-      template="/resources/template/template.xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:phi="http://java.sun.com/jsf/composite/pharmacy"
-      xmlns:bi="http://java.sun.com/jsf/composite/bill"
-      xmlns:pa="http://java.sun.com/jsf/composite/paymentMethod"
-      xmlns:pat="http://java.sun.com/jsf/composite/patient">
-
+      xmlns="http://www.w3.org/1999/xhtml">
     <h:body>
-
         <ui:composition template="/resources/template/template.xhtml">
-
             <ui:define name="content">
+                <h:outputStylesheet>
+                    /* Styles for screen display */
+                    .page {
+                    border: 1px solid #ddd;
+                    margin: 20px;
+                    padding: 20px;
+                    background-color: whitesmoke;
+                    box-shadow: 3px 3px 2px 0px rgba(128, 0, 0, 1);
+                    }
+                    .d-flex {
+                    display: flex;
+                    }
+                    .flex-grow-1 {
+                    flex: 1;
+                    }
+                    .bill-item {
+                    page-break-after: always;
+                    }
 
-
-                <h:panelGroup rendered="#{!(webUserController.hasPrivilege('OpdBilling') or webUserController.hasPrivilege('LabCashier'))}" >
+                    /* Styles for print */
+                    @media print {
+                    .bill-item {
+                    page-break-after: always;
+                    margin: 0px;
+                    padding: 0px
+                    }
+                    .page {
+                    border: none;
+                    background-color: transparent;
+                    box-shadow: none;
+                    margin: 0px;
+                    padding: 0px
+                    }
+                    }
+                </h:outputStylesheet>
+                <h:panelGroup rendered="#{!(webUserController.hasPrivilege('OpdBilling') or webUserController.hasPrivilege('LabCashier'))}">
                     You are NOT authorized
                 </h:panelGroup>
-
-                <h:panelGroup rendered="#{webUserController.hasPrivilege('OpdBilling') or webUserController.hasPrivilege('LabCashier')}" styleClass="opdPanel" >
-                    <h:form >
-                        <h:panelGroup rendered="#{sessionController.loggedPreference.opdBillPaperType eq 'FiveFivePrintedPaper'}">
-                            <div class="nonPrintBlock">
-                                <p:commandButton value="Print" 
-                                                 process="@this" 
-                                                 update="@all" 
-                                                 type="button"  
-                                                 ajax="false">
-                                    <p:printer target="gpBillPreview" ></p:printer>
-                                </p:commandButton>
-
-                                <p:commandButton value="New OPD Bill" ajax="false" action="#{opdBillController.navigateToNewOpdBill()}" >
-                                </p:commandButton>
-                                <p:commandButton ajax="false" value="Batch Cancel" action="#{opdBillController.cancellAll}" style="float: right;"
-                                                 onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
-                                                                 return false;"/>
-                            </div>
-                            <p:outputLabel value="Balance = #{opdBillController.cashBalance}" style="font-weight: bold;font-size: 20pt;color: red;"/>
-                            <h:panelGroup id="gpBillPreview">
-                                <ui:repeat value="#{opdBillController.bills}" var="bill">
-                                    <bi:opdBillPrintRuhunu bill="#{bill}" dup="false"/>
-                                </ui:repeat>
-                            </h:panelGroup>
-                        </h:panelGroup>
-
-                        <h:panelGroup rendered="#{sessionController.loggedPreference.opdBillPaperType eq 'FiveFivePaper'}">
-                            <div class="nonPrintBlock">
-                                <p:commandButton value="Print" ajax="false" action="#"  >
-                                    <p:printer target="fiveFivePaperWithHeadings" ></p:printer>
-                                </p:commandButton>
-
-                                <p:commandButton value="New Bill" ajax="false" action="#{opdBillController.navigateToNewOpdBill()}" >
-                                </p:commandButton>
-
-                                <p:commandButton ajax="false" value="Batch Cancel" action="#{opdBillController.cancellAll}" style="float: right;"
-                                                 onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
-                                                                 return false;"/>
-                            </div>
-                            <h:panelGroup id="fiveFivePaperWithHeadings">
-                                <ui:repeat value="#{opdBillController.bills}" var="b">
-                                    <bi:five_five_paper_with_headings bill="#{b}"/>                        
-                                </ui:repeat>
-                            </h:panelGroup>
-                        </h:panelGroup>
-
-                        <h:panelGroup rendered="#{sessionController.loggedPreference.opdBillPaperType eq 'PosPaper'}">
-                            <h:panelGrid rendered="#{sessionController.loggedPreference.opdPosBillWithoutLogo eq false}">
-                                <div class="nonPrintBlock">
-                                    <p:commandButton value="Print" ajax="false" action="#"  >
-                                        <p:printer target="gpPosBill" ></p:printer>
-                                    </p:commandButton>
-
-
-
-                                    <p:commandButton value="New Bill" ajax="false" action="#{opdBillController.navigateToNewOpdBill()}" >
-                                    </p:commandButton>
-
-                                    <p:commandButton ajax="false" value="Batch Cancel" action="#{opdBillController.cancellAll}" style="float: right;"
-                                                     onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
-                                                                     return false;"/>
+                <h:panelGroup
+                    rendered="#{webUserController.hasPrivilege('OpdBilling') or webUserController.hasPrivilege('LabCashier')}">
+                    <h:form>
+                        <p:commandButton value="Print" icon="ui-icon-print" >
+                            <p:printer target="gpPosBill1" />
+                        </p:commandButton>
+                        <p:commandButton value="New OPD Bill" 
+                                         ajax="false"
+                                         action="#{opdBillController.navigateToNewOpdBill()}">
+                        </p:commandButton>
+                         <p:commandButton value="Patient Registration" 
+                                         ajax="false"
+                                         action="#{opdBillController.navigateToSearchPatients()}">
+                        </p:commandButton>
+                        
+                        <div class="w-100">
+                            <div class="d-flex justify-content-between">
+                                <div class="flex-grow-1">
+                                    <h:panelGroup id="gpPosBill1" >
+                                        <ui:repeat value="#{opdBillController.bills}" var="b">
+                                            <div class="bill-item page">
+                                                <h:outputText value="#{b.billPrint}" escape="false"></h:outputText>
+                                            </div>
+                                        </ui:repeat>
+                                    </h:panelGroup>
                                 </div>
-                                <h:panelGroup id="gpPosBill">
-                                    <div style="page-break-after: always;">
-
-                                        <ui:repeat value="#{opdBillController.bills}" var="b">
-                                            <bi:posOpdBill bill="#{b}" duplicate="false"/>                        
-                                        </ui:repeat>
-                                    </div>
-                                    <div></div>
-                                    <div style="page-break-after: always;">
-
-                                        <ui:repeat value="#{opdBillController.bills}" var="b">
-                                            <bi:posOpdBill bill="#{b}" duplicate="false"/>                        
-                                        </ui:repeat>
-                                    </div>
-                                </h:panelGroup>
-                            </h:panelGrid>
-
-
-
-
-                            <h:panelGrid rendered="#{sessionController.loggedPreference.opdPosBillWithoutLogo eq true}">
-                                <div class="nonPrintBlock">
-                                    <p:commandButton value="Print" ajax="false" action="#"  >
-                                        <p:printer target="gpPosBillWithoutLogo" ></p:printer>
-                                    </p:commandButton>
-
-                                    <p:commandButton value="New Bill" ajax="false" action="#{opdBillController.navigateToNewOpdBill()}" >
-                                    </p:commandButton>
-
-                                    <p:commandButton ajax="false" value="Batch Cancel" action="#{opdBillController.cancellAll}" style="float: right;"
-                                                     onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
-                                                                     return false;"/>
+                                <div class="flex-grow-1">
+                                    <p:dataTable value="#{opdBillController.bills}" var="b" >
+                                        <p:column headerText="Bill No" >
+                                            <h:outputText value="#{b.id}" ></h:outputText>
+                                        </p:column>
+                                    </p:dataTable>
                                 </div>
-                                <h:panelGroup id="gpPosBillWithoutLogo">
-                                    <div style="page-break-after: always;">
-
-                                        <ui:repeat value="#{opdBillController.bills}" var="b">
-                                            <bi:posOpdBillWithoutLogo bill="#{b}" duplicate="false"/>                        
-                                        </ui:repeat>
-                                    </div>     
-                                    <div style="page-break-after: always;">
-
-                                        <ui:repeat value="#{opdBillController.bills}" var="b">
-                                            <bi:posOpdBillWithoutLogo bill="#{b}" duplicate="false"/>                        
-                                        </ui:repeat>
-                                    </div>  
-                                </h:panelGroup>
-                            </h:panelGrid>
-
-                        </h:panelGroup>
-
-
+                            </div>
+                        </div>
                     </h:form>
-
                 </h:panelGroup>
             </ui:define>
-
         </ui:composition>
-
     </h:body>
 </html>
