--- a/src/main/webapp/opd/opd_bill.xhtml
+++ b/src/main/webapp/opd/opd_bill.xhtml
@@ -378,7 +378,7 @@
                                             </div>
                                             <div class="col-md-2" >
                                                 <h:commandButton  value="Settle"
-                                                                  action="#{opdBillController.settleBill}" 
+                                                                  action="#{opdBillController.settleOpdBill()}" 
                                                                   class="btn-success form-control"
                                                                   >
                                                 </h:commandButton>
