--- a/src/main/webapp/admin/users/admin_manage_users.xhtml
+++ b/src/main/webapp/admin/users/admin_manage_users.xhtml
@@ -16,9 +16,19 @@
 
                                 <p:tab title="Manage Users"  rendered="#{webUserController.hasPrivilege('AdminManagingUsers') or sessionController.firstLogin }" >
                                     <div class="d-grid gap-2">
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="Add New User" action="admin_add_new_user" actionListener="#{webUserController.prepairAddNewUser}" onclick="onSubmitButton();"/>
-                                        <p:commandButton  styleClass="linkButton" ajax="false" value="View Users" action="admin_view_user" onclick="onSubmitButton();"/>
-                                        <p:commandButton  styleClass="linkButton" ajax="false" value="View User Login Details" action="admin_logins_all" onclick="onSubmitButton();"/>
+                                        <p:commandButton  
+                                            ajax="false" 
+                                            value="Add New User" 
+                                            action="admin_add_new_user" 
+                                            actionListener="#{webUserController.prepairAddNewUser}"/>
+                                        <p:commandButton 
+                                            ajax="false" 
+                                            value="View Users" 
+                                            action="admin_view_user" />
+                                        <p:commandButton   
+                                            ajax="false" 
+                                            value="View User Login Details" 
+                                            action="admin_logins_all" />
 
                                     </div>
                                 </p:tab>
@@ -28,10 +38,10 @@
 
 
                             <h:panelGroup rendered="false" >
-                                <p:commandButton  styleClass="linkButton" ajax="false" value="Change Passwords" action="admin_change_password" onclick="onSubmitButton();"/>
-                                <p:commandButton  styleClass="linkButton" ajax="false" value="Manage Privileges" action="admin_user_privilages" onclick="onSubmitButton();"/>                                
-                                <p:commandButton  styleClass="linkButton" ajax="false" value="Add PaymentScheme to User" action="admin_user_paymentScheme" onclick="onSubmitButton();"/>
-                                <p:commandButton  styleClass="linkButton" ajax="false" value="Add Department to User" action="admin_user_department" onclick="onSubmitButton();"/>
+                                <p:commandButton   ajax="false" value="Change Passwords" action="admin_change_password" />
+                                <p:commandButton   ajax="false" value="Manage Privileges" action="admin_user_privilages" />                                
+                                <p:commandButton   ajax="false" value="Add PaymentScheme to User" action="admin_user_paymentScheme" />
+                                <p:commandButton   ajax="false" value="Add Department to User" action="admin_user_department" />
 
                             </h:panelGroup>
 
