Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/users/admin_manage_users.xhtml
+++ b/src/main/webapp/admin/users/admin_manage_users.xhtml
@@ -20,7 +20,7 @@
                                             ajax="false" 
                                             value="Add New User" 
                                             action="admin_add_new_user" 
-                                            actionListener="#{webUserController.prepairAddNewUser}"/>
+                                            actionListener="#{webUserController.navigateToAddNewUser}"/>
                                         <p:commandButton 
                                             ajax="false" 
                                             value="View Users" 
